<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color" >

    <RelativeLayout
        android:id="@+id/relative_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tv_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/products"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_rate_the_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/tv_product"
            android:layout_marginLeft="10dp"
            android:text="@string/rate_the_products"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btn_view_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:contentDescription="@string/view_result"
            android:src="@drawable/view_results" />
    </RelativeLayout>

	<GridView
	    android:id="@+id/grid_products"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:layout_margin="20dp"
	    android:numColumns="auto_fit"
	    android:scrollbars="none"
	    android:listSelector="@color/background_color"
	    android:layout_below="@id/relative_top">
	    
	</GridView>
</RelativeLayout>