<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color" >

    <TextView
        android:id="@+id/tv_rate_a_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/rate_a_product"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/img_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_rate_a_product"
        android:layout_centerHorizontal="true"
        android:background="@drawable/icon_it"
        android:contentDescription="@string/products" />

    <TextView
        android:id="@+id/tv_rate_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_product"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="1"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/rating_bar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_rate_value"
        android:layout_centerHorizontal="true"
        android:max="10"
        android:background="@color/background_color"
        android:progress="1"
        android:progressDrawable="@drawable/progressbar"
        android:secondaryProgress="1"
        android:minHeight="10dp"
        android:maxHeight="10dp"
        android:paddingLeft="6dp" 
        android:paddingRight="6dp" 
        android:thumb="@drawable/thumb_shape" />

    <TextView
        android:id="@+id/tv_rate_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_rate_value"
        android:layout_toLeftOf="@id/rating_bar"
        android:text="1"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_rate_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_rate_value"
        android:layout_toRightOf="@id/rating_bar"
        android:text="10"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_comment"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:lines="6"
        android:hint="@string/add_a_comment"
		android:textSize="15sp"
        android:padding="2dp"
        android:gravity="top|left"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/background_color"
        android:background="@drawable/editable_background"
        android:layout_below="@id/rating_bar"/>

    <TextView
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/submit"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:paddingLeft="45dp"
            android:paddingRight="45dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/background_color"
            android:layout_below="@id/edt_comment"
            android:background="@drawable/cylindrical_shape"/>
    
    
    <TextView
            android:id="@+id/btn_view_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/view_results"
            android:textStyle="bold"
            android:textSize="13sp"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:textColor="@color/background_color"
            android:layout_below="@id/btn_submit"
            android:background="@drawable/cylindrical_shape_small"/>
</RelativeLayout>